package laboration1;

/**
 * @author Stefan
 * @author Oleg
 */
public class Figur {

    public Figur() {
    }

    public void getArea() {
    }

    public void setSida1(double a) {
    }

    public void setSida2(double a) {
    }

    public void setRadie(double a) {
    }

    public void setSida(double a) {
    }

    public void setBas(double a) {
    }

    public void setHöjd(double a) {
    }

    public void getOmkrets() {
    }
}
