package laboration1;

/**
 * @author Stefan
 * @author Oleg
 */
public class Main {

    public static void main(String[] args) {
        Program.programMetod();

    }

}
